--- a/news-radar-cloud/Dockerfile
+++ b/news-radar-cloud/Dockerfile
@@ -1,8 +1,15 @@
 FROM python:3.11-slim
+
+RUN apt-get update && apt-get install -y --no-install-recommends     build-essential     libxml2-dev     libxslt1-dev     && rm -rf /var/lib/apt/lists/*
+
 WORKDIR /app
+
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
+
 COPY app ./app
+
 ENV TZ=Asia/Taipei
+
 EXPOSE 8080
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8080"]
+CMD ["sh", "-c", "uvicorn app.main:app --host 0.0.0.0 --port ${PORT:-8080}"]
